Исправлен набор обработчиков в TwelveFreeAdapterV2